# cif

./: .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml
_base/: Dockerfile  entrypoint.sh
actions/create-user/: check-groups.sh
cif/: __init__.py  builder.py  cli.py  helpers.py  main.py  settings.py
cif/actions/create-user/: Dockerfile
cif/services/_base/: Dockerfile  entrypoint.sh
cif/services/_firehole/: Dockerfile
cif/services/client-developer/: Dockerfile
cif/services/client-phished/: phishing.py
cif/services/client-workstation/: Dockerfile
cif/services/mysql/: Dockerfile  entrypoint.sh  init.sql
cif/services/samba/: Dockerfile  entrypoint.sh
cif/services/ssh/: entrypoint.sh
cif/services/tchat/: Dockerfile  entrypoint.sh
cif/services/tchat/app/: 2-lib-msg.php
cif/services/vsftpd/: Dockerfile  entrypoint.sh
cif/services/wordpress/: entrypoint.sh
images/_base/: Dockerfile  entrypoint.sh
images/chat/: Dockerfile  docker-php.conf  entrypoint.sh
images/client-developer/: Dockerfile  entrypoint.sh
images/client-phished/: entrypoint.sh
images/firehole/: Dockerfile  entrypoint.sh
images/ftp/: Dockerfile  entrypoint.sh
images/mysql/: Dockerfile  entrypoint.sh
images/ssh/: Dockerfile  entrypoint.sh
images/wordpress/: Dockerfile  entrypoint.sh
mysql/: Dockerfile
services/_base/: Dockerfile
services/client-phished/: Dockerfile
services/ftp/: entrypoint.sh
services/mysql/: Dockerfile  entrypoint.sh
services/wordpress/: entrypoint.sh
ssh/: Dockerfile
wordpress/: Dockerfile
