[tool.poetry]
name = "cif"
version = "0.4.1"
description = ""
authors = ["Jiri Raja <raja@ics.muni.cz>"]
readme = "README.md"
include = [
    { path = "services", format = ["sdist", "wheel"] },
    { path = "actions", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.poetry.scripts]
cif = 'cif.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
