[tool.poetry]
name = "cif"
version = "0.5.1"
description = ""
authors = ["Jiri Raja <raja@ics.muni.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.poetry.scripts]
cif = 'cif.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
