[tool.poetry]
name = "cif"
version = "0.11.0"
description = ""
authors = ["Jiri Raja <raja@ics.muni.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[tool.poetry.scripts]
cif = 'cif.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
